create the banner section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,29 @@
 
         <button class="btn btn-header">Solicitar Crédito</button>
     </header>
+
+    <section class="banner">
+        <h1 class="title title-banner">EMPRÉSTIMO RÁPIDO E <br>CONSCIENTE</h1>
+
+        <section class="cards-banner">
+            <div class="card">
+                <h3 class="subtitle">EMPRÉSTIMO CONSIGNADO</h3>
+                <p class="text">Empréstimo consignado para aposentados e pensionistas do INSS, com as melhores condições do mercado.</p>
+                <button class="btn">Simule Agora</button>
+            </div>
+
+            <div class="card">
+                <h3 class="subtitle">SAQUE ANIVERSÁRIO FGTS</h3>
+                <p class="text">Antecipação do saque aniversário FGTS com a maior agilidade e transparência do mercado.</p>
+                <button class="btn">Simule Agora</button>
+            </div>
+
+            <div class="card">
+                <h3 class="subtitle">EMPRÉSTIMO PESSOAL</h3>
+                <p class="text">Empréstimo pessoal com débito em conta ou na fatura de energia. Liberação imediata e com parcelamento em até 12 vezes.</p>
+                <button class="btn">Simule Agora</button>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
