create the testimonials section

--- a/index.html
+++ b/index.html
@@ -77,5 +77,23 @@
             </div>
         </div>
     </section>
+
+    <section class="testimonials-section">
+        <h2 class="title title-depoiments">Depoimentos</h2>
+
+        <div class="testimonials-container">
+            <div class="testimonial-card">
+                <i class="icon-testimony fa-regular fa-circle-user"></i>
+                <h3 class="subtitle testimony-subtitle">Vanuza</h3>
+                <p class="text">"Exelente atendimento, muito grata pelos serviços."</p>
+            </div>
+
+            <div class="testimonial-card">
+                <i class="icon-testimony fa-regular fa-circle-user"></i>
+                <h3 class="subtitle testimony-subtitle">Patrícia</h3>
+                <p class="text">"Ótimo atendimento! Super indico, parabéns pelo trabalho."</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
