create the banks section

--- a/index.html
+++ b/index.html
@@ -95,5 +95,13 @@
             </div>
         </div>
     </section>
+
+    <section class="banks-section">
+        <img class="bank-img" src="/assets/bank-images/bancoBmg.png" alt="">
+        <img class="bank-img" src="/assets/bank-images/bancoPan.png" alt="">
+        <img class="bank-img" src="/assets/bank-images/bancoVotorantim.png" alt="">
+        <img class="bank-img" src="/assets/bank-images/bradesco.png" alt="">
+        <img class="bank-img" src="/assets/bank-images/crefaz.png" alt="">
+    </section>
 </body>
 </html>
