--- a/index.html
+++ b/index.html
@@ -103,5 +103,19 @@
         <img class="bank-img" src="/assets/bank-images/bradesco.png" alt="">
         <img class="bank-img" src="/assets/bank-images/crefaz.png" alt="">
     </section>
+
+    <footer class="footer">
+        <img class="logo-img" src="/assets/images/logo-image.png" alt="logo da icred">
+        <p class="text">Copyright © 2022 Icred</p>
+        <div class="contact">
+            <h3 class="subtitle">Contato</h3>
+
+            <p class="text">
+                Rua Poeta Lauro Menezes, 500, Centro, Tianguá-CE.<br>
+                Tel.: (88)99242-5938.<br>
+                financeiraicred10@gmail.com.<br>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
