update the vantages section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <section class="testimonials-section">
-        <h2 class="title title-depoiments">Depoimentos</h2>
+        <h2 class="title testimony-title">Depoimentos</h2>
 
         <div class="testimonials-container">
             <div class="testimonial-card">
