--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <section class="testimonials-section">
-        <h2 class="title testimony-title">Depoimentos</h2>
+        <h2 class="title testimony-title"><i class="icon-quote fa-solid fa-quote-left"></i>Depoimentos<i class="icon-quote fa-solid fa-quote-right"></i></h2>
 
         <div class="testimonials-container">
             <div class="testimonial-card">
