add index.css responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <body>
     <header class="header">
         <img src="/assets/images/logo-image.png" alt="logo da icred" class="logo-img">
-
         <button class="btn btn-header">Solicitar Crédito</button>
     </header>
 
@@ -29,7 +28,7 @@
         <section class="cards-banner">
             <div class="card">
                 <h3 class="subtitle">EMPRÉSTIMO CONSIGNADO</h3>
-                <p class="text">Empréstimo consignado para aposentados e pensionistas do INSS, com as melhores condições do mercado.</p>
+                <p class="text">Antecipação do saque aniversário FGTS com a maior agilidade e transparência do mercado.</p>
                 <button class="btn">Simule Agora</button>
             </div>
 
@@ -41,7 +40,7 @@
 
             <div class="card">
                 <h3 class="subtitle">EMPRÉSTIMO PESSOAL</h3>
-                <p class="text">Empréstimo pessoal com débito em conta ou na fatura de energia. Liberação imediata e com parcelamento em até 12 vezes.</p>
+                <p class="text">Antecipação do saque aniversário FGTS com a maior agilidade e transparência do mercado.</p>
                 <button class="btn">Simule Agora</button>
             </div>
         </section>
@@ -79,7 +78,7 @@
     </section>
 
     <section class="testimonials-section">
-        <h2 class="title testimony-title"><i class="icon-quote fa-solid fa-quote-left"></i>Depoimentos<i class="icon-quote fa-solid fa-quote-right"></i></h2>
+        <h2 class="title testimony-title">Depoimentos</h2>
 
         <div class="testimonials-container">
             <div class="testimonial-card">
