add the header media queries

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <body>
     <header class="header">
         <img src="/assets/images/logo-image.png" alt="logo da icred" class="logo-img">
-        <button class="btn btn-header">Solicitar Crédito</button>
+
+        <button class="btn btn-header">Solicitar Crédito <i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
+        <button class="btn btn-header btn-header-mobile"><i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
+
     </header>
 
     <section class="banner-section">
