add the media queries

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="banner-section">
         <h1 class="title title-banner">EMPRÉSTIMO RÁPIDO E <br>CONSCIENTE</h1>
 
-        <section class="cards-banner">
+        <section class="cards-container">
             <div class="card">
                 <h3 class="subtitle">EMPRÉSTIMO CONSIGNADO</h3>
                 <p class="text">Antecipação do saque aniversário FGTS com a maior agilidade e transparência do mercado.</p>
