create the nav and links

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
     <header class="header">
         <img src="/assets/images/logo-image.png" alt="logo da icred" class="logo-img">
 
-        <button class="btn btn-header">Solicitar Crédito <i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
-        <button class="btn btn-header btn-header-mobile"><i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
-
+        <nav class="navgator">
+            <a class="nav-link" href="">Início</a>
+            <a class="nav-link" href="">Contato</a>
+            <a class="nav-link" href="">Sobre</a>
+            <button class="btn btn-header">Solicitar Crédito <i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
+            <button class="btn btn-header btn-header-mobile"><i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
+        </nav>
     </header>
 
     <section class="banner-section">
