--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
 
+    <link rel="stylesheet" href="/fontawesome-free-6.2.0-web/css/all.min.css">
+
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/contact.css">
 
@@ -22,5 +24,34 @@
             <button class="btn btn-header btn-header-mobile"><i class="icon-whatsapp fa-brands fa-whatsapp"></i></button>
         </nav>
     </header>
+
+    <section class="contact-banner">
+        <div class="contact-content">
+            <h1 class="title">Fale conosco</h1>
+            <p class="text">Entre em contato, estamos sempre prontos para te atender.</p>
+
+            <div class="card">
+                <i class="icon fa-solid fa-location-dot"></i>
+                <h3>Endereço</h3>
+                <h2></h2>
+                <hr>
+            </div>
+
+            <div class="card">
+                <i class="icon fa-solid fa-phone"></i>
+                <h3>Contato</h3>
+                <h2></h2>
+                <hr>
+            </div>
+
+            <div class="card">
+                <i class="icon fa-solid fa-envelope"></i>
+                <h3>E-mail</E-mail></h3>
+                <h2></h2>
+                <hr>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
